# -Context-Aware-RAG-Chatbot-Using-LangGraph

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  documents.py  embeddings.py  graph.py  ingestion.py  llm.py  main.py  schemas.py  session_store.py  vectorstore.py
app/static/: app.js  index.html  styles.css
