[project]
name = "rag-research-agent"
version = "0.1.0"
description = "Context-aware LangGraph RAG chatbot for research paper PDFs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.60",
    "opendataloader-pdf>=2.0.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "qdrant-client>=1.12.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

